--- a/codigo/CRUD livro/cadastroLivro.css
+++ b/codigo/CRUD livro/cadastroLivro.css
@@ -2,18 +2,18 @@
     box-sizing: border-box;
 }
 
+
 .container {
-    margin-top: 150px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
     display: grid;
     grid-template-columns: auto auto;
-    background-color: hsla(0, 0%, 0%, 0.548);
-    padding: 50px;
+    background-color: rgb(201, 200, 200);
+    padding: 40px;
     width: 100%;
     max-width: 1000px;
-    border: 1px solid;
     border-radius: 10px;
 }
 
@@ -42,10 +42,11 @@
 .form-control {
     width: 100%;
     height: 25%;
-    border: 2px solid;
+    border: 2px #323232;
     border-radius: 5px;
     padding-left: 5px;
     padding-right: 5px;
+   
 }
 
 .foto-form > p{
@@ -71,7 +72,6 @@ label[for="imagem"] {
     width: 100%;
     max-height: 300px;
     max-width: 400px;
-    border: 1px dashed;
     border-radius: 10px;
 }
 
@@ -83,7 +83,7 @@ label[for="imagem"]:hover {
     width: 100px;
     height: 50px;
     margin-left: 100px;
-    border: 2px solid;
+    border: 2px #323232;
     border-radius: 5px;
     background-color: white;
     cursor: pointer;
